WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269245
REGRESSION (December 2023?): 2x increase in JSC-Tests-EWS build duration
https://bugs.webkit.org/show_bug.cgi?id=269245
Summary
REGRESSION (December 2023?): 2x increase in JSC-Tests-EWS build duration
Ryan Haddad
Reported
2024-02-12 15:43:45 PST
There has been about a 2x increase in JSC-Tests-EWS build duration Took 1 hr 14 min in
https://ews-build.webkit.org/#/builders/20/builds/20778
on Oct 27, 2023 Took 2 hr 22 min in
https://ews-build.webkit.org/#/builders/20/builds/30807
on Jan 31, 2024
Attachments
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2024-02-12 15:44:21 PST
rdar://121678486
Ryan Haddad
Comment 2
2024-02-12 15:44:51 PST
1:23:38
272431@main
-
https://ews-build.webkit.org/#/builders/20/builds/27123
2:21:55
272436@main
-
https://ews-build.webkit.org/#/builders/20/builds/27124
This build ran near the two above and took 2:18:01 to complete
https://ews-build.webkit.org/#/builders/20/builds/27121
That change landed in
https://commits.webkit.org/272434@main
, so it is within the potential regression range. I'll open a draft PR with a revert to see what the bots think.
Ryan Haddad
Comment 3
2024-02-12 15:47:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24293
Alexey Proskuryakov
Comment 4
2024-02-13 12:43:44 PST
The test took 1h10m, so seems like it confirms that
272434@main
is the cause.
Justin Michaud
Comment 5
2024-02-13 15:09:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24376
EWS
Comment 6
2024-02-14 14:37:12 PST
Committed
274663@main
(c9407f23b73e): <
https://commits.webkit.org/274663@main
> Reviewed commits have been landed. Closing PR #24376 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug