REGRESSION (December 2023?): 2x increase in JSC-Tests-EWS build duration https://bugs.webkit.org/show_bug.cgi?id=269245 rdar://121678486

Reviewed by Yusuke Suzuki.

Skip useRandomizingExecutableIslandAllocation on x86 where we don't use
jump islands anyway.

* Source/JavaScriptCore/runtime/Options.cpp:
(JSC::Options::notifyOptionsChanged):

Canonical link: https://commits.webkit.org/274663@main